liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
	labels:
		run: ready-if-service-ready
		name: ready-if-service-ready
spec:
	containers:
	- image: nginx:1.16.1-alpine
	  name: ready-if-service-ready
	  livenessProbe:
		exec:
			command:
			- 'true'
	  readinessProbe:
		exec:
			command:
			- sh
			- -c
			- 'wget -T2 -O- http://service-am-i-ready:80'
	restartPolicy: Always
